syntax = "proto3";

package worldmonitor.economic.v1;

import "sebuf/http/annotations.proto";
import "worldmonitor/economic/v1/get_fred_series.proto";
import "worldmonitor/economic/v1/list_world_bank_indicators.proto";
import "worldmonitor/economic/v1/get_energy_prices.proto";
import "worldmonitor/economic/v1/get_macro_signals.proto";
import "worldmonitor/economic/v1/get_energy_capacity.proto";
import "worldmonitor/economic/v1/get_bis_policy_rates.proto";
import "worldmonitor/economic/v1/get_bis_exchange_rates.proto";
import "worldmonitor/economic/v1/get_bis_credit.proto";

// EconomicService provides APIs for macroeconomic data from FRED, World Bank, and EIA.
service EconomicService {
  option (sebuf.http.service_config) = {base_path: "/api/economic/v1"};

  // GetFredSeries retrieves time series data from the Federal Reserve Economic Data.
  rpc GetFredSeries(GetFredSeriesRequest) returns (GetFredSeriesResponse) {
    option (sebuf.http.config) = {path: "/get-fred-series", method: HTTP_METHOD_GET};
  }

  // ListWorldBankIndicators retrieves development indicator data from the World Bank.
  rpc ListWorldBankIndicators(ListWorldBankIndicatorsRequest) returns (ListWorldBankIndicatorsResponse) {
    option (sebuf.http.config) = {path: "/list-world-bank-indicators", method: HTTP_METHOD_GET};
  }

  // GetEnergyPrices retrieves current energy commodity prices from EIA.
  rpc GetEnergyPrices(GetEnergyPricesRequest) returns (GetEnergyPricesResponse) {
    option (sebuf.http.config) = {path: "/get-energy-prices", method: HTTP_METHOD_GET};
  }

  // GetMacroSignals computes 7 macro signals from 6 upstream sources with BUY/CASH verdict.
  rpc GetMacroSignals(GetMacroSignalsRequest) returns (GetMacroSignalsResponse) {
    option (sebuf.http.config) = {path: "/get-macro-signals", method: HTTP_METHOD_GET};
  }

  // GetEnergyCapacity retrieves installed capacity data (solar, wind, coal) from EIA.
  rpc GetEnergyCapacity(GetEnergyCapacityRequest) returns (GetEnergyCapacityResponse) {
    option (sebuf.http.config) = {path: "/get-energy-capacity", method: HTTP_METHOD_GET};
  }

  // GetBisPolicyRates retrieves central bank policy rates from BIS.
  rpc GetBisPolicyRates(GetBisPolicyRatesRequest) returns (GetBisPolicyRatesResponse) {
    option (sebuf.http.config) = {path: "/get-bis-policy-rates", method: HTTP_METHOD_GET};
  }

  // GetBisExchangeRates retrieves effective exchange rates from BIS.
  rpc GetBisExchangeRates(GetBisExchangeRatesRequest) returns (GetBisExchangeRatesResponse) {
    option (sebuf.http.config) = {path: "/get-bis-exchange-rates", method: HTTP_METHOD_GET};
  }

  // GetBisCredit retrieves credit-to-GDP ratio data from BIS.
  rpc GetBisCredit(GetBisCreditRequest) returns (GetBisCreditResponse) {
    option (sebuf.http.config) = {path: "/get-bis-credit", method: HTTP_METHOD_GET};
  }
}
